--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,10 @@
 [build.environment]
   NODE_VERSION = "20"
 
+[functions]
+  node_bundler = "esbuild"
+  external_node_modules = ["@netlify/blobs"]
+
 [[redirects]]
   from = "/.netlify/*"
   to = "/.netlify/:splat"
